--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import PaymentMethods from '../components/PaymentMethods.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Flujo TV - Streaming Premium">
+<Layout title="Flujo TV 🔥 Streaming Premium 4K | Desde $9.99/mes | +3000 Canales en Vivo">
   <Header />
   <Hero />
   <Benefits />
